[package]
name = "rust_fish"
version = "0.1.0"
authors = ["einseler <richard.einsele@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemfiles = "0.9"
ndarray = {version = "0.15.3", features = ["serde-1", "approx"]}
approx = "0.3.2"
ndarray-linalg = { version = "0.14", features = ["intel-mkl"]}
ndarray-stats = "0.3"
phf = { version = "0.8.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.9"
serde_json = "1.0"
serde_yaml = "0.8.17"
serde_derive = "1.0"
clap = "3.0.0-beta.2"
toml = "0.5"
log = "0.4.0"
env_logger = "0.8.3"
pretty_env_logger = "0.4"
rayon = "1.5.0"
hashbrown = "0.11.2"
soa_derive = "0.10.0"
rand_distr = "0.4.0"
rand ="0.8.3"

[profile.release]
debug = true